ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_empty_function.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 0) (define ) {
BLOCK 0
RETURN ;
};

