ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_global_set.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 0) (define %-8 %-7 %-6 %-5 %-4 %-3 %-2 %-1 %0 %1) {
BLOCK 0
%1 = %0
%-5 = %1
RETURN ;
};
define 1 (param %0) (result 0) (define %-8 %-7 %-6 %-5 %-4 %-3 %-2 %-1 %0 %1) {
BLOCK 1
%1 = %0
%-8 = %1
RETURN ;
};

