ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_nested_block_value.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 1) (define %0 %1 %2 %3 %4 %5 %6 %7 %8 %9 %10) {
BLOCK 0
BLOCK 1
%1 = -1
KILL %1
%2 = 1
BLOCK 3
%3 = 2
BLOCK 5
%4 = 4
KILL %4
%5 = 8
%6 = 16
%7 = %0
TABLE GOTO 6 4 ELSE GOTO 2
%8 = %7 op %6
KILL %6
KILL %5
GOTO 6
BLOCK 6
%9 = %8 op %7
KILL %7
KILL %3
GOTO 4
BLOCK 4
%10 = %9 op %8
KILL %8
KILL %2
GOTO 2
BLOCK 2
RETURN %10;
};

